# intelligent_terminal

./: .gitignore  code_assistant.md  command_requirements.yaml  missing_flags.yaml  package-lock.json  package.json  scraped_flags.json  vite.config.js
.ca_ast/: index.db
docs/: alias.md  b2sum.md  base64.md  basename.md  cat.md  cd.md  cksum.md  cp.md  date.md  dir.md  dirname.md  echo.md  env.md  export.md  find.md  grep.md  gunzip.md  gzip.md  head.md  history.md  ls.md  md5sum.md  mkdir.md  mv.md  nl.md  printenv.md  pwd.md  realpath.md  rm.md  rmdir.md  seq.md  set.md  sha512sum.md  shuf.md  sleep.md  sort.md  tac.md  tail.md  tar.md  testing_guide.md  (+6 more)
scripts/: compare_flags.py  extract_flags_ollama.py  fix_help_text.py  generate_docs.py  patch_missing_flags.py
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  state.rs
src-tauri/src/commands/: alias.rs  b2sum.rs  base32_cmd.rs  base64.rs  basename.rs  cat.rs  cd.rs  cksum.rs  cp.rs  cut.rs  date.rs  dir.rs  dirname.rs  echo.rs  env.rs  exit.rs  export.rs  false_cmd.rs  find.rs  grep.rs  gunzip.rs  gzip.rs  head.rs  history.rs  ls.rs  md5sum.rs  mkdir.rs  mod.rs  mv.rs  netstat.rs  nl.rs  nmap.rs  nslookup.rs  paste.rs  ping.rs  printenv.rs  pwd.rs  realpath.rs  rm.rs  rmdir.rs  (+19 more)
tests/: test_runner.py
