[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

[[bin]]
name = "tauri-app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standalone CLI binary for programmatic testing (no Tauri UI required)
[[bin]]
name = "iterminal-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.3"
sha2 = "0.10.9"
md-5 = "0.10.6"
blake2 = "0.10.6"
base64 = "0.22.1"
crc32fast = "1.5.0"
walkdir = "2.5.0"
flate2 = "1.1.9"
tar = "0.4.44"
hickory-resolver = "0.25.2"
netstat2 = "0.11.2"
fastping-rs = "0.2.4"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.27.0"

